Fix alignment

--- a/src/components/TrackedCourses/TrackedCoursesView.css
+++ b/src/components/TrackedCourses/TrackedCoursesView.css
@@ -1,5 +1,5 @@
 .tracked-courses-view {
-  text-align: left;
+  text-align: center;
   margin: 60px 0;
 }
 
